TGR-701: Paged view added to Tiger Proxy WebUI